--- a/bin/build
+++ b/bin/build
@@ -4,18 +4,37 @@ import pathlib
 import shutil
 
 import jinja2
+from ruamel.yaml import YAML
 
+
+print("Building..")
+
+
+def get_yaml() -> YAML:
+    yaml = YAML(typ="safe")
+    yaml.default_flow_style = False
+    return yaml
+
+
+yaml = get_yaml()
 
 project_root = pathlib.Path(os.environ["PROJECT_ROOT"])
 web_dir = project_root / "web"
 build_dir = project_root / "ignore" / "dist"
+
+events_file = project_root / "events.yaml"
+events = yaml.load(events_file)
+
 styles = web_dir / "style.css"
 index_src = web_dir / "index.html"
+
 index_dest = build_dir / "index.html"
 
 shutil.copy(styles, build_dir)
 
 index_template = jinja2.Template(index_src.read_text())
-index_rendered = index_template.render()
+index_rendered = index_template.render(events=events)
 
 index_dest.write_text(index_rendered)
+
+print("Done.")
