--- a/bin/build
+++ b/bin/build
@@ -20,7 +20,7 @@ yaml = get_yaml()
 project_root = pathlib.Path(os.environ["PROJECT_ROOT"])
 web_dir = project_root / "web"
 build_dir = project_root / "ignore" / "dist"
-build_dir.mkdir(exist_ok=True)
+build_dir.mkdir(exist_ok=True, parents=True)
 
 events_file = project_root / "events.yaml"
 events = yaml.load(events_file)
