--- a/events.yaml
+++ b/events.yaml
@@ -6,3 +6,4 @@
       affiliation: Alliander / Navara
   date: May 18th, 2021
   meetup_url: https://www.meetup.com/onehot-data-science-utrecht/
+  published: false
