Clean build_dir before building

--- a/bin/build
+++ b/bin/build
@@ -21,11 +21,13 @@ yaml = get_yaml()
 project_root = pathlib.Path(os.environ["PROJECT_ROOT"])
 web_dir = project_root / "web"
 build_dir = project_root / "ignore" / "dist"
+shutil.rmtree(build_dir)
 build_dir.mkdir(exist_ok=True, parents=True)
 
 events_file = project_root / "events.yaml"
 events = yaml.load(events_file)
 events = [event for event in events if event["published"]]
+
 
 for static in {"style.css", "logo.svg"}:
     shutil.copy(web_dir / static, build_dir)
