--- a/bin/build
+++ b/bin/build
@@ -21,7 +21,7 @@ yaml = get_yaml()
 project_root = pathlib.Path(os.environ["PROJECT_ROOT"])
 web_dir = project_root / "web"
 build_dir = project_root / "ignore" / "dist"
-shutil.rmtree(build_dir)
+shutil.rmtree(build_dir, ignore_errors=True)
 build_dir.mkdir(exist_ok=True, parents=True)
 
 events_file = project_root / "events.yaml"
