--- a/bin/build
+++ b/bin/build
@@ -37,7 +37,7 @@ for directory in {"img", "font"}:
 
 
 def load(template_name: str) -> Optional[str]:
-    template_file = web_dir / template_name
+    template_file = web_dir / "templates" / template_name
     if template_file.exists():
         return template_file.read_text()
     else:
@@ -46,9 +46,17 @@ def load(template_name: str) -> Optional[str]:
 
 jinja_env = jinja2.Environment(loader=jinja2.FunctionLoader(load))
 
-for page in {"index.html", "about.html", "code-of-conduct.html"}:
-    dest_file = build_dir / page
-    rendered = jinja_env.get_template(page).render(
+for page in (web_dir / "pages").iterdir():
+    front_matter_yaml, template = page.read_text().split("===")
+    front_matter = yaml.load(front_matter_yaml)
+
+    url = front_matter["url"].lstrip("/")
+
+    dest_dir = build_dir / url
+    dest_file = build_dir / url / "index.html"
+
+    dest_dir.mkdir(exist_ok=True)
+    rendered = jinja_env.from_string(template).render(
         events=events, active_page=page
     )
     dest_file.write_text(rendered)
