--- a/bin/build
+++ b/bin/build
@@ -1,17 +1,20 @@
 #!/usr/bin/env python
 import functools
 import os
+import pprint
 import shutil
 import subprocess
+import sys
 import xml.etree.ElementTree as ET
 from dataclasses import dataclass
 from enum import Enum
 from pathlib import Path
-from typing import Iterator, List, Optional
+from typing import Iterator, List, NoReturn, Optional
 
 import jinja2
 import typer
 from mashumaro import DataClassYAMLMixin
+from mashumaro.exceptions import InvalidFieldValue, MissingField
 
 cli = typer.Typer(add_completion=False)
 
@@ -100,7 +103,64 @@ def iter_pages(dirs: Dirs) -> Iterator[Page]:
 
 def load_state(dirs: Dirs) -> State:
     events_file = dirs.root / "events.yaml"
-    return State.from_yaml(events_file.read_text())
+    try:
+        return State.from_yaml(events_file.read_text())
+    except InvalidFieldValue as e:
+        pretty_print(events_file.relative_to(dirs.root), e)
+
+
+def pretty_print(filename: Path, exc: InvalidFieldValue) -> NoReturn:
+    # The default exception message is pretty difficult
+    # to read. Therefore, walk through the context to find
+    # the first exception that was thrown and it's parent
+    # so we can print the problem and it's context.
+    parent: BaseException = exc
+    child: Optional[BaseException] = parent.__context__
+    while child and (grandchild := child.__context__) is not None:
+        parent = child
+        # noinspection PyUnboundLocalVariable
+        child = grandchild  # has always been assigned already.
+
+    # With the current Exception hierarchy of `mashumaro`, this
+    # will always be the case.
+    assert isinstance(parent, InvalidFieldValue)
+
+    # Pretty print errors
+    print(f"{filename}: ERROR reading state at:\n")
+
+    field = parent.field_value
+
+    # Lists should be printed at depth 2. Otherwise they
+    # show up as `[{...}]`. The rest of the dict should be
+    # printed like normal.
+    depth = 2 if isinstance(field, list) else 1
+    pprint.pp(field, depth=depth)
+
+    # There might be other errors too (e.g. wrong type or
+    # failed validation). Will add more here as we find them.
+    if isinstance(child, MissingField):
+        print(f"\nMissing field '{child.field_name}'")
+
+    # Try to detect the schema and print it if available.
+    # `field_type` can be a dataclass, but it could also be
+    # a generic type like `List[SomeDataclass]`. Detect what
+    # case we're in using some reflection to find out the
+    # dataclass fields.
+    field_type = parent.field_type
+    if hasattr(field_type, "__dataclass_fields__"):
+        dcf = field_type.__dataclass_fields__
+    elif hasattr(field_type, "__args__"):
+        dcf = field_type.__args__[0].__dataclass_fields__
+    else:
+        dcf = {}
+
+    if dcf:
+        print("\nExpected schema:\n")
+
+    for key, field in dcf.items():
+        print(f" - {key}: {field.type}")
+
+    sys.exit(1)
 
 
 @cli.command()
