--- a/bin/build
+++ b/bin/build
@@ -1,7 +1,6 @@
 #!/usr/bin/env python
 import functools
 import os
-import pprint
 import shutil
 import subprocess
 import sys
@@ -9,13 +8,12 @@ import xml.etree.ElementTree as ET
 from dataclasses import dataclass
 from enum import Enum
 from pathlib import Path
-from typing import Any, Dict, Iterator, List, NoReturn, Optional, Union
+from typing import Any, Iterator, List, NoReturn, Optional
 
 import jinja2
 import typer
-import yaml
-from mashumaro import DataClassYAMLMixin
-from mashumaro.exceptions import InvalidFieldValue, MissingField
+from pydantic import BaseModel, ValidationError
+from ruamel.yaml import YAML  # type: ignore
 
 cli = typer.Typer(add_completion=False)
 
@@ -32,26 +30,22 @@ class Dirs:
         return cls(root=root, web=root / "web", build=root / "ignore" / "dist")
 
 
-@dataclass
-class FrontMatter(DataClassYAMLMixin):
+class FrontMatter(BaseModel):
     url: str
 
 
-@dataclass
-class Page(DataClassYAMLMixin):
+class Page(BaseModel):
     path: Path
     front_matter: FrontMatter
     template: str
 
 
-@dataclass
-class Link(DataClassYAMLMixin):
+class Link(BaseModel):
     text: str
     url: str
 
 
-@dataclass
-class Speaker(DataClassYAMLMixin):
+class Speaker(BaseModel):
     name: str
     affiliation: str
     bio: str
@@ -59,8 +53,7 @@ class Speaker(DataClassYAMLMixin):
     external_urls: List[Link]
 
 
-@dataclass
-class Talk(DataClassYAMLMixin):
+class Talk(BaseModel):
     title: str
     subtitle: str
     speaker: Speaker
@@ -72,8 +65,7 @@ class EventType(Enum):
     MEETUP = "meetup"
 
 
-@dataclass
-class Event(DataClassYAMLMixin):
+class Event(BaseModel):
     title: str
     type: EventType
     description: str
@@ -85,8 +77,7 @@ class Event(DataClassYAMLMixin):
     published: bool
 
 
-@dataclass
-class State(DataClassYAMLMixin):
+class State(BaseModel):
     events: List[Event]
 
 
@@ -98,81 +89,37 @@ def load(dirs: Dirs, template_name: str) -> Optional[str]:
         return None
 
 
-def yaml_decoder(packed: Union[str, bytes], **kwargs: Any) -> Dict[Any, Any]:
-    val: Dict[Any, Any] = yaml.load(packed, Loader=yaml.BaseLoader)
-    return val
+def yaml_decode(val: str) -> Any:
+    yaml = YAML(typ="safe")
+    yaml.default_flow_style = False
+    return yaml.load(val)
 
 
 def iter_pages(dirs: Dirs) -> Iterator[Page]:
     for path in (dirs.web / "pages").iterdir():
         front_matter_yaml, template = path.read_text().split("===")
-        # noinspection PyTypeChecker
-        front_matter = FrontMatter.from_yaml(
-            front_matter_yaml, decoder=yaml_decoder
-        )
-        yield Page(path, front_matter, template)
+
+        try:
+            front_matter = FrontMatter.parse_obj(
+                yaml_decode(front_matter_yaml)
+            )
+        except ValidationError as e:
+            show_validation_error(path.relative_to(dirs.root), e)
+
+        yield Page(path=path, front_matter=front_matter, template=template)
 
 
 def load_state(dirs: Dirs) -> State:
     events_file = dirs.root / "events.yaml"
     try:
-        # noinspection PyTypeChecker
-        return State.from_yaml(events_file.read_text(), decoder=yaml_decoder)
-    except InvalidFieldValue as e:
-        pretty_print(events_file.relative_to(dirs.root), e)
+        return State.parse_obj(yaml_decode(events_file.read_text()))
+    except ValidationError as e:
+        show_validation_error(events_file.relative_to(dirs.root), e)
 
 
-def pretty_print(filename: Path, exc: InvalidFieldValue) -> NoReturn:
-    # The default exception message is pretty difficult
-    # to read. Therefore, walk through the context to find
-    # the first exception that was thrown and it's parent
-    # so we can print the problem and it's context.
-    parent: BaseException = exc
-    child: Optional[BaseException] = parent.__context__
-    while child and (grandchild := child.__context__) is not None:
-        parent = child
-        # noinspection PyUnboundLocalVariable
-        child = grandchild  # has always been assigned already.
-
-    # With the current Exception hierarchy of `mashumaro`, this
-    # will always be the case.
-    assert isinstance(parent, InvalidFieldValue)
-
-    # Pretty print errors
-    print(f"{filename}: ERROR reading state at:\n")
-
-    field = parent.field_value
-
-    # Lists should be printed at depth 2. Otherwise they
-    # show up as `[{...}]`. The rest of the dict should be
-    # printed like normal.
-    depth = 2 if isinstance(field, list) else 1
-    pprint.pp(field, depth=depth)
-
-    # There might be other errors too (e.g. wrong type or
-    # failed validation). Will add more here as we find them.
-    if isinstance(child, MissingField):
-        print(f"\nMissing field '{child.field_name}'")
-
-    # Try to detect the schema and print it if available.
-    # `field_type` can be a dataclass, but it could also be
-    # a generic type like `List[SomeDataclass]`. Detect what
-    # case we're in using some reflection to find out the
-    # dataclass fields.
-    field_type = parent.field_type
-    if hasattr(field_type, "__dataclass_fields__"):
-        dcf = field_type.__dataclass_fields__
-    elif hasattr(field_type, "__args__"):
-        dcf = field_type.__args__[0].__dataclass_fields__
-    else:
-        dcf = {}
-
-    if dcf:
-        print("\nExpected schema:\n")
-
-    for key, field in dcf.items():
-        print(f" - {key}: {field.type}")
-
+def show_validation_error(filename: Path, error: ValidationError) -> NoReturn:
+    print(f"{filename}: Problems found")
+    print(error)
     sys.exit(1)
 
 
