--- a/events.yaml
+++ b/events.yaml
@@ -20,12 +20,29 @@ events:
       speaker:
         name: Bas de Kan
         affiliation: Alliander / Navara
-        bio: As a data science consultant in the energy field I combine my interest in data science with sustainability. My main interests are in machine learning/deep learning, but I also have a solid background in computer science, mainly code optimisation.
+        bio: |
+          As a data science consultant in the energy field I combine
+          my interest in data science with sustainability. My main
+          interests are in machine learning/deep learning, but I also
+          have a solid background in computer science, mainly code
+          optimisation.
         photo_url: img/speakers/basdekan.jpg
         external_urls:
           - text: Linkedin
             url: https://www.linkedin.com/in/bas-de-kan-168aa0112/
-      abstract: The world is moving fast towards more sustainable energy, but it is difficult for grid operators to keep up! Do they even know how prepared they are for the transition and can they mitigate potential failures of the grid while the necessary infrastructure is not yet finished? In this talk we will look at some examples of how Alliander, one of the largests grid operators in the Netherlands, takes on some of the challenges of the energy transition. We will start by looking at how data can give better insight into the scope of these challenges. Afterwards we will look at how a smart grid or a smart customer can already mitigate a lot of these challenges without laying a single new cable in the ground.
+      abstract: |
+        The world is moving fast towards more sustainable energy, but
+        it is difficult for grid operators to keep up! Do they even
+        know how prepared they are for the transition and can they
+        mitigate potential failures of the grid while the necessary
+        infrastructure is not yet finished? In this talk we will look
+        at some examples of how Alliander, one of the largests grid
+        operators in the Netherlands, takes on some of the challenges
+        of the energy transition. We will start by looking at how data
+        can give better insight into the scope of these
+        challenges. Afterwards we will look at how a smart grid or a
+        smart customer can already mitigate a lot of these challenges
+        without laying a single new cable in the ground.
       keywords: Energy transition, Smart grid
   date: 2021-05-18
   start_time: 19:00:00 CET
