Ignore incorrect PyCharm error
`show_validation_error()` never returns, so if an exception occurs, this
code cannot be reached.

--- a/bin/build
+++ b/bin/build
@@ -104,6 +104,7 @@ def iter_pages(dirs: Dirs) -> Iterator[Page]:
         except ValidationError as e:
             show_validation_error(path.relative_to(dirs.root), e)
 
+        # noinspection PyUnboundLocalVariable
         yield Page(path=path, front_matter=front_matter, template=template)
 
 
