--- a/events.yaml
+++ b/events.yaml
@@ -50,4 +50,4 @@ events:
     text: Discord
     url: https://discord.gg/5Y8g3EWBZ2
   meetup_url: https://www.meetup.com/onehot-data-science-utrecht/
-  published: false
+  published: true
