--- a/bin/build
+++ b/bin/build
@@ -1,5 +1,4 @@
 #!/usr/bin/env python
-import functools
 import os
 import shutil
 import subprocess
@@ -8,7 +7,7 @@ import xml.etree.ElementTree as ET
 from dataclasses import dataclass
 from enum import Enum
 from pathlib import Path
-from typing import Any, Iterator, List, NoReturn, Optional
+from typing import Any, Iterator, List, NoReturn
 
 import jinja2
 import typer
@@ -23,11 +22,19 @@ class Dirs:
     root: Path
     web: Path
     build: Path
+    templates: Path
+    pages: Path
 
     @classmethod
     def from_env(cls) -> "Dirs":
         root = Path(os.environ["PROJECT_ROOT"])
-        return cls(root=root, web=root / "web", build=root / "ignore" / "dist")
+        web = root / "web"
+        build = root / "ignore" / "dist"
+        templates = web / "templates"
+        pages = web / "pages"
+        return cls(
+            root=root, web=web, build=build, templates=templates, pages=pages
+        )
 
 
 class FrontMatter(BaseModel):
@@ -93,14 +100,6 @@ class State(BaseModel):
     events: List[Event]
 
 
-def load(dirs: Dirs, template_name: str) -> Optional[str]:
-    template_file = dirs.web / "templates" / template_name
-    if template_file.exists():
-        return template_file.read_text()
-    else:
-        return None
-
-
 def yaml_decode(val: str) -> Any:
     return YAML(typ="base").load(val)
 
@@ -150,8 +149,10 @@ def site() -> None:
     for directory in {"img", "font"}:
         shutil.copytree(dirs.web / directory, dirs.build / directory)
 
-    load_fun = functools.partial(load, dirs)
-    jinja_env = jinja2.Environment(loader=jinja2.FunctionLoader(load_fun))
+    jinja_env = jinja2.Environment(
+        loader=jinja2.FileSystemLoader(dirs.templates),
+        undefined=jinja2.StrictUndefined,
+    )
 
     state = load_state(dirs)
     published_events = [e for e in state.events if e.published]
